# NEXWorld

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindSDL2.cmake  FindSDL2_image.cmake
release/Shaders/: Final.fsh  Final.vsh
src/: clientexec.cpp  opengl.h  renderer.cpp  renderer.h  vertexarray.cpp  window.cpp  window.h
src/client/: CMakeLists.txt  blockrenderer.cpp  blockrenderer.h  blocktexture.cpp  blocktexture.h  camera.h  chunkrenderer.cpp  chunkrenderer.h  clientapi.cpp  gui.cpp  gui.h  main.cpp  opengl.cpp  opengl.h  player.cpp  player.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  window.cpp  window.h  worldrenderer.cpp  worldrenderer.h
src/mainplugin/: CMakeLists.txt  block.cpp  block.h  blockrenderer.cpp  blockrenderer.h  main.cpp  worldgen.cpp  worldgen.h
src/server/: CMakeLists.txt  main.cpp
src/shared/: CMakeLists.txt  arraymap.h  blockdata.h  blocktype.cpp  blocktype.h  chunk.h  chunkfilter.h  common.h  config.cpp  config.h  debug.h  filesystem.cpp  filesystem.h  library.h  logger.h  main.cpp  main.h  mat.h  object.h  playerobject.h  plugin.cpp  plugin.h  pluginapi.cpp  pluginapi.h  updatecounter.cpp  updatecounter.h  updatescheduler.cpp  updatescheduler.h  vec.h  world.cpp  world.h  worldgen.cpp  worldgen.h  worldloader.h
